# qelebrimbor

./: .gitignore  .pre-commit-config.yaml  NOTICE  README.md  ang-viewer.py  pyproject.toml  qb-viewer.py  qb.py  void-explorer.py
assets/: notes.txt  vw-experimental.json
benchmarking/: benchmark-dataset-rings-small.py  benchmark-dataset-rings.py  benchmark-dataset-small.py  benchmark.py  cycle-analysis-dataset-small.py  feature-analysis-dataset-rings.py  feature-analysis-dataset-small.py  generate-dataset-rings-small.py  pathfinders.py  plot-results-dataset-rings.py  testing-chainfinders.py  testing-colorblind-pathfinder.py  testing-colorblind-strandfinders.py  testing-colorless-pathfinder.py  testing-pathfinders.py  testing-ringfinders.py  testing-strandfinders.py  testing-subringfinders.py
docs/: conf.py  index.rst
documentation/: notes.txt  path-color-shuffling.tex  path-overheads.tex  tutorial.ipynb
examples/: converting-file.py  generate-random-circuit.py  generate-steane-code-qubits7.py  octahedron-testing.py  pathfinder-testing.py  pathfinding-dijkstra.py
experimentation/: alternating-rings.py  cycle-finder-random-s42-q4-d10.py  cycle-finder.py  cycle-layout.py  essentially-different-rings-4.py  essentially-different-rings-8.py  essentially-different-rings.py  generate-steane-code-qubits7.py  nmtfl_testing.py  octahedron-faces-consistency-checker.py  octahedron-faces-minima-explorer.py  octahedron-sides-overhead-explorer.py  octahedron-testing.py  random-circuit-generator.py  realising-hadamard-ring.py  realising-identity-ring.py  realising-rings.py  (+11 more)
(+272 files in other folders)
