[project]
name = "qelebrimbor"
authors = [
    { name = "Seweryn Dynerowicz", email = "seweryn.dynerowicz@gmail.com" },
]
version = "0.1.0"
description = "A toolbox for studying the relationships between ZX-graphs and Lattice Surgery."
requires-python = ">=3.14"
dependencies = [
    "networkx==3.6.1",
    "numpy==2.4.3",
    "pyzx==0.9.0",
    "vedo==2026.6.1"
]
